force-app/main/default/objects/Lease_Agreement__c/fields/Agreed_Month_Rent__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Month_Rent__c</fullName>
    <label>Agreed Month Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>