force-app/main/default/objects/Lease_Agreement__c/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Properties</label>
    <referenceTo>Properties__c</referenceTo>
    <relationshipLabel>Lease Agreements</relationshipLabel>
    <relationshipName>Lease_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>