force-app/main/default/objects/Lease_Agreement__c/fields/Tenants__c.field-meta.xml
<CustomField>
    <fullName>Tenants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenants</label>
    <referenceTo>Tenants__c</referenceTo>
    <relationshipLabel>Lease Agreements</relationshipLabel>
    <relationshipName>Lease_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>